# aws-agentcore-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  agent.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: automerge-dependabot.yml  codeql.yml  deploy.yml  gemini-fix.yml  gemini-write-tests.yml  pr-environment.yml
iac/: Makefile  agentcore_runtime.tf  backend.config  entra_oauth.tf  locals.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
tests/: test_agent.py  test_letter_counter.py
